--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
   "author": "",
   "scripts": {
     "dev": "next",
-    "build": "npx prisma migrate deploy && next build",
+    "build": "next build",
     "start": "next start",
-    "db:up": "docker compose up -d",
-    "db:down": "docker compose down"
+    "deploy": "fly deploy --local-only",
+    "format": "npx prettier --write src"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "1.0.3",
-    "@prisma/client": "4.10.1",
     "next": "12.1.4",
     "next-auth": "4.3.1",
     "react": "18.2.0",
@@ -25,11 +23,7 @@
     "@types/next-auth": "3.13.0",
     "@types/node": "16.18.66",
     "@types/react": "17.0.44",
-    "prisma": "4.10.1",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
   }
 }
