--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "npx prettier --write src"
   },
   "dependencies": {
+    "mongoose": "^8.5.2",
     "next": "12.1.4",
     "next-auth": "4.3.1",
     "react": "18.2.0",
