--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-# When deploying to production, set the `NEXTAUTH_URL` environment variable to the canonical URL of your site.
-NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_URL=http://localhost:3000
 
-# MongoDB
-MONGODB_URI="mongodb+srv://<username>:<password>@my-project-abc123.mongodb.net/test?retryWrites=true&w=majority"
+MONGODB_URI=mongodb+srv://<username>:<password>@my-project-abc123.mongodb.net/test?retryWrites=true&w=majority
