--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@auth/mongodb-adapter": "^3.4.2",
+        "bcrypt": "^5.1.1",
         "mongodb": "^6.8.0",
         "mongoose": "^8.5.2",
         "next": "^14.2.5",
@@ -24,6 +25,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "16.18.66",
         "@types/react": "^18.3.3",
         "ts-node": "10.7.0",
