--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
+    "mongoose-unique-validator": "^5.0.1",
     "next": "^14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -29,6 +30,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "16.18.66",
     "@types/react": "^18.3.3",
     "jest": "^29.7.0",
