--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "http-status-codes": "^2.3.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
