--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
@@ -31,6 +32,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "16.18.66",
     "@types/react": "^18.3.3",
