Add jwt secrets

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000
 
 MONGODB_URI=mongodb+srv://<username>:<password>@my-project-abc123.mongodb.net/test?retryWrites=true&w=majority
+
+JWT_SECRET=WeX6a5BTSZ62TXrU4oQSMg
+JWT_EXPIRATION="30 days"
