--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^18.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nodemon": "^3.1.4",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
   }
