Turn on experimentalDecoratros

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
         "strictPropertyInitialization": true,
         "noImplicitThis": true,
         "alwaysStrict": true,
+        "experimentalDecorators": true,
         "plugins": [
             {
                 "name": "next"
