--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/node": "16.18.66",
     "@types/react": "^18.3.3",
+    "autoprefixer": "^10.4.20",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.4",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
   }
