--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
     "tabWidth": 4,
     "semi": false,
     "singleQuote": true,
-    "printWidth": 110
+    "printWidth": 110,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
