--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.12",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
