--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "flowbite-react": "^0.10.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^5.0.1",
