--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "flowbite-react": "^0.10.1",
@@ -25,11 +26,11 @@
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
     "next": "^14.2.5",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "8.0.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
