--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.2",
+    "react-toastify": "^10.0.6",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "zod": "^3.23.8"
