--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "flowbite-react": "^0.10.1",
