--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "mongoose-unique-validator": "^5.0.1",
+    "nanoid": "^5.0.9",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
